--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,28 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:gravity="center"
-              android:orientation="vertical"
+                android:orientation="vertical"
+              android:background="@color/wallet_holo_blue_light"
                 tools:context="com.luis404.emacsgooglesync.MainActivity">
 
     <Button
-        android:id="@+id/auth"
-        android:text="@string/dropbox_auth"
+        android:id="@+id/dropbox"
+        android:width="200dp"
+        android:text="@string/enable_dropbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <Button
-        android:id="@+id/upload_file"
-        android:text="@string/upload_file"
+        android:id="@+id/google"
+        android:width="200dp"
+        android:text="@string/enable_google_calendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <Button
-        android:id="@+id/download_file"
-        android:text="@string/download_file"
+        android:id="@+id/sync"
+        android:width="200dp"
+        android:text="@string/start_sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
